use lightning::{
    matching::MatchingEngine,
    models::{init_global_config, schema::*},
};
use std::time::{SystemTime, UNIX_EPOCH};
use uuid::Uuid;

#[tokio::main]
async fn main() {
    println!("=== Lightning Cancel Order Demo ===\n");

    // åˆå§‹åŒ–å…¨å±€é…ç½®
    init_global_config();
    println!("âœ“ Global currencies and symbols initialized");
    println!("  - BTC (id: 1)");
    println!("  - USDT (id: 2)");
    println!("  - BTC-USDT (symbol_id: 1, base: BTC, quote: USDT)\n");

    // åˆ›å»ºæ’®åˆå¼•æ“
    let mut matching_engine = MatchingEngine::new();
    println!("âœ“ Matching engine created\n");

    println!("=== æ­¥éª¤1: æ„å»ºåˆå§‹è®¢å•ç°¿ ===");

    // æ·»åŠ ä¸€äº›åˆå§‹è®¢å•
    let initial_orders = vec![
        (1001, "50000.0", "1.0", 0), // ä¹°å•
        (1002, "49500.0", "0.5", 0), // ä¹°å•
        (1003, "50500.0", "0.8", 1), // å–å•
        (1004, "51000.0", "1.2", 1), // å–å•
    ];

    let mut order_ids = Vec::new();

    for (account_id, price, quantity, side) in &initial_orders {
        let result = matching_engine.place_order(
            Uuid::new_v4(),
            1, // BTC-USDT
            *account_id,
            0, // Limit order
            *side,
            price,
            quantity,
        );

        match result {
            Ok((order_id, trades)) => {
                order_ids.push((*account_id, order_id));
                let side_str = if *side == 0 { "ä¹°å•" } else { "å–å•" };
                println!(
                    "  è´¦æˆ· {} {}: ä»·æ ¼={}, æ•°é‡={}, è®¢å•ID={}, æˆäº¤={}",
                    account_id,
                    side_str,
                    price,
                    quantity,
                    order_id,
                    trades.len()
                );
            }
            Err(e) => {
                println!("  è´¦æˆ· {} ä¸‹å•å¤±è´¥: {}", account_id, e);
            }
        }
    }

    // æ˜¾ç¤ºåˆå§‹è®¢å•ç°¿çŠ¶æ€
    println!("\n--- åˆå§‹è®¢å•ç°¿çŠ¶æ€ ---");
    display_order_book(&matching_engine, 1);

    println!("\n=== æ­¥éª¤2: å–æ¶ˆè®¢å•æµ‹è¯• ===");

    // æµ‹è¯•1: å–æ¶ˆå­˜åœ¨çš„è®¢å•
    if let Some((account_id, order_id)) = order_ids.get(0) {
        println!("1. å–æ¶ˆè´¦æˆ· {} çš„è®¢å• {} (åº”è¯¥æˆåŠŸ)", account_id, order_id);

        match matching_engine.cancel_order(1, *order_id) {
            Some(cancelled_order) => {
                if cancelled_order.account_id == *account_id {
                    println!("   âœ“ è®¢å•å–æ¶ˆæˆåŠŸ");
                    println!("     - è®¢å•ID: {}", cancelled_order.id);
                    println!("     - è´¦æˆ·ID: {}", cancelled_order.account_id);
                    println!("     - åŸå§‹æ•°é‡: {}", cancelled_order.quantity);
                    println!("     - å·²æˆäº¤æ•°é‡: {}", cancelled_order.filled_quantity);
                    println!("     - å–æ¶ˆæ•°é‡: {}", cancelled_order.remaining_quantity());
                    println!("     - è®¢å•çŠ¶æ€: {:?}", cancelled_order.status);

                    // æ¨¡æ‹Ÿä½™é¢è§£å†»é€»è¾‘
                    let side_str = match cancelled_order.side {
                        lightning::matching::OrderSide::Bid => "ä¹°å•",
                        lightning::matching::OrderSide::Ask => "å–å•",
                    };
                    println!("     - è®¢å•ç±»å‹: {}", side_str);

                    match cancelled_order.side {
                        lightning::matching::OrderSide::Bid => {
                            let refund_amount =
                                cancelled_order.price * cancelled_order.remaining_quantity();
                            println!("     âœ“ è§£å†» {} USDT (quote currency)", refund_amount);
                        }
                        lightning::matching::OrderSide::Ask => {
                            println!(
                                "     âœ“ è§£å†» {} BTC (base currency)",
                                cancelled_order.remaining_quantity()
                            );
                        }
                    }
                } else {
                    println!("   âŒ è®¢å•ä¸å±äºæŒ‡å®šè´¦æˆ·");
                }
            }
            None => {
                println!("   âŒ è®¢å•æœªæ‰¾åˆ°");
            }
        }

        // æ˜¾ç¤ºå–æ¶ˆåçš„è®¢å•ç°¿çŠ¶æ€
        println!("\n--- å–æ¶ˆè®¢å•åçš„è®¢å•ç°¿çŠ¶æ€ ---");
        display_order_book(&matching_engine, 1);
    }

    // æµ‹è¯•2: å–æ¶ˆä¸å­˜åœ¨çš„è®¢å•
    println!("\n2. å–æ¶ˆä¸å­˜åœ¨çš„è®¢å• (è®¢å•ID: 99999)");
    match matching_engine.cancel_order(1, 99999) {
        Some(_) => {
            println!("   âŒ æ„å¤–æˆåŠŸ - è¿™ä¸åº”è¯¥å‘ç”Ÿ");
        }
        None => {
            println!("   âœ“ æ­£ç¡®è¿”å›è®¢å•æœªæ‰¾åˆ°");
        }
    }

    // æµ‹è¯•3: éƒ¨åˆ†æˆäº¤è®¢å•çš„å–æ¶ˆ
    println!("\n3. æµ‹è¯•éƒ¨åˆ†æˆäº¤è®¢å•çš„å–æ¶ˆ");

    // å…ˆä¸‹ä¸€ä¸ªå¤§çš„ä¹°å•
    let large_buy_result = matching_engine.place_order(
        Uuid::new_v4(),
        1,
        2001,
        0,         // Limit order
        0,         // Bid
        "50600.0", // é«˜ä»·ï¼Œä¼šéƒ¨åˆ†æ’®åˆç°æœ‰å–å•
        "1.5",     // å¤§æ•°é‡
    );

    match large_buy_result {
        Ok((large_order_id, trades)) => {
            println!(
                "   ä¸‹å¤§ä¹°å•: è®¢å•ID={}, æˆäº¤ç¬”æ•°={}",
                large_order_id,
                trades.len()
            );

            for trade in &trades {
                println!("   æˆäº¤: ä»·æ ¼={}, æ•°é‡={}", trade.price, trade.quantity);
            }

            // æ˜¾ç¤ºæ’®åˆåçš„è®¢å•ç°¿
            println!("\n--- æ’®åˆåçš„è®¢å•ç°¿çŠ¶æ€ ---");
            display_order_book(&matching_engine, 1);

            // ç°åœ¨å°è¯•å–æ¶ˆè¿™ä¸ªéƒ¨åˆ†æˆäº¤çš„è®¢å•
            println!("\n   å°è¯•å–æ¶ˆéƒ¨åˆ†æˆäº¤çš„è®¢å• {}", large_order_id);
            match matching_engine.cancel_order(1, large_order_id) {
                Some(cancelled_order) => {
                    println!("   âœ“ éƒ¨åˆ†æˆäº¤è®¢å•å–æ¶ˆæˆåŠŸ");
                    println!("     - åŸå§‹æ•°é‡: {}", cancelled_order.quantity);
                    println!("     - å·²æˆäº¤æ•°é‡: {}", cancelled_order.filled_quantity);
                    println!("     - å–æ¶ˆæ•°é‡: {}", cancelled_order.remaining_quantity());

                    let refund_amount =
                        cancelled_order.price * cancelled_order.remaining_quantity();
                    println!("     âœ“ è§£å†»å‰©ä½™èµ„é‡‘: {} USDT", refund_amount);
                }
                None => {
                    println!("   âŒ è®¢å•æœªæ‰¾åˆ°æˆ–å·²å®Œå…¨æˆäº¤");
                }
            }

            // æ˜¾ç¤ºæœ€ç»ˆè®¢å•ç°¿çŠ¶æ€
            println!("\n--- æœ€ç»ˆè®¢å•ç°¿çŠ¶æ€ ---");
            display_order_book(&matching_engine, 1);
        }
        Err(e) => {
            println!("   å¤§ä¹°å•ä¸‹å•å¤±è´¥: {}", e);
        }
    }

    println!("\n=== æ­¥éª¤4: é”™è¯¯æƒ…å†µæµ‹è¯• ===");

    // æµ‹è¯•4: å°è¯•å–æ¶ˆæ— æ•ˆäº¤æ˜“å¯¹çš„è®¢å•
    if let Some((_, order_id)) = order_ids.get(1) {
        println!("4. å–æ¶ˆæ— æ•ˆäº¤æ˜“å¯¹çš„è®¢å• (äº¤æ˜“å¯¹ID: 999)");
        match matching_engine.cancel_order(999, *order_id) {
            Some(_) => {
                println!("   âŒ æ„å¤–æˆåŠŸ - è¿™ä¸åº”è¯¥å‘ç”Ÿ");
            }
            None => {
                println!("   âœ“ æ­£ç¡®å¤„ç†æ— æ•ˆäº¤æ˜“å¯¹");
            }
        }
    }

    println!("\n=== æ­¥éª¤5: æ¨¡æ‹Ÿå®Œæ•´çš„å–æ¶ˆè®¢å•æµç¨‹ ===");

    // ä¸‹å‡ ä¸ªæ–°è®¢å•ç”¨äºæ¼”ç¤ºå®Œæ•´æµç¨‹
    let demo_orders = vec![
        (3001, "49000.0", "2.0", 0), // ä¹°å•
        (3002, "52000.0", "1.5", 1), // å–å•
    ];

    let mut demo_order_ids = Vec::new();

    println!("ä¸‹æ–°çš„æ¼”ç¤ºè®¢å•:");
    for (account_id, price, quantity, side) in &demo_orders {
        let result =
            matching_engine.place_order(Uuid::new_v4(), 1, *account_id, 0, *side, price, quantity);

        match result {
            Ok((order_id, trades)) => {
                demo_order_ids.push((*account_id, order_id, *side));
                let side_str = if *side == 0 { "ä¹°å•" } else { "å–å•" };
                println!(
                    "  è´¦æˆ· {} {}: è®¢å•ID={}, ä»·æ ¼={}, æ•°é‡={}",
                    account_id, side_str, order_id, price, quantity
                );
            }
            Err(e) => {
                println!("  è®¢å•å¤±è´¥: {}", e);
            }
        }
    }

    println!("\næ¨¡æ‹ŸgRPCå–æ¶ˆè®¢å•è¯·æ±‚å¤„ç†æµç¨‹:");
    for (account_id, order_id, side) in &demo_order_ids {
        println!("\n--- å¤„ç†å–æ¶ˆè®¢å•è¯·æ±‚ ---");
        println!("è¯·æ±‚å‚æ•°:");
        println!("  - accountId: {}", account_id);
        println!("  - symbolId: 1");
        println!("  - orderId: {}", order_id);

        // æ¨¡æ‹ŸgRPCå¤„ç†æµç¨‹
        println!("\nå¤„ç†æ­¥éª¤:");
        println!("1. SequencerProcessor æ¥æ”¶è¯·æ±‚");
        println!("2. è½¬å‘åˆ° MatchProcessor (æŒ‰äº¤æ˜“å¯¹åˆ†ç‰‡)");
        println!("3. MatchProcessor æ‰§è¡Œè®¢å•å–æ¶ˆ");

        match matching_engine.cancel_order(1, *order_id) {
            Some(cancelled_order) => {
                println!("4. è®¢å•å–æ¶ˆæˆåŠŸ");
                println!("5. å‘é€ä½™é¢è§£å†»æ¶ˆæ¯åˆ° SequencerProcessor");

                let side_str = if *side == 0 { "ä¹°å•" } else { "å–å•" };
                println!("6. è§£å†»é€»è¾‘ ({}):", side_str);

                match cancelled_order.side {
                    lightning::matching::OrderSide::Bid => {
                        let refund_amount =
                            cancelled_order.price * cancelled_order.remaining_quantity();
                        println!("   - è§£å†» {} USDT (quote currency)", refund_amount);
                    }
                    lightning::matching::OrderSide::Ask => {
                        println!(
                            "   - è§£å†» {} BTC (base currency)",
                            cancelled_order.remaining_quantity()
                        );
                    }
                }

                // æ¨¡æ‹Ÿå“åº”
                let mock_response = CancelOrderResponse {
                    code: 0,
                    message: Some("Order cancelled successfully".to_string()),
                    order_id: *order_id as i64,
                    cancelled_quantity: Some(cancelled_order.remaining_quantity().to_string()),
                    refund_amount: None, // åœ¨å®é™…ç³»ç»Ÿä¸­ç”±SequencerProcessorè®¡ç®—
                };

                println!("7. è¿”å›æˆåŠŸå“åº”:");
                println!("   - code: {}", mock_response.code);
                println!("   - message: {:?}", mock_response.message);
                println!("   - orderId: {}", mock_response.order_id);
                println!(
                    "   - cancelledQuantity: {:?}",
                    mock_response.cancelled_quantity
                );
            }
            None => {
                println!("4. è®¢å•æœªæ‰¾åˆ°");
                let mock_response = CancelOrderResponse {
                    code: 404,
                    message: Some("Order not found".to_string()),
                    order_id: *order_id as i64,
                    cancelled_quantity: None,
                    refund_amount: None,
                };
                println!("5. è¿”å›é”™è¯¯å“åº”:");
                println!("   - code: {}", mock_response.code);
                println!("   - message: {:?}", mock_response.message);
            }
        }
    }

    println!("\n=== å–æ¶ˆè®¢å•æ¥å£ç‰¹æ€§æ€»ç»“ ===");
    println!("âœ… è®¢å•çŠ¶æ€éªŒè¯: æ£€æŸ¥è®¢å•æ˜¯å¦å­˜åœ¨å’Œå¯å–æ¶ˆ");
    println!("âœ… æƒé™éªŒè¯: ç¡®ä¿åªæœ‰è®¢å•æ‰€æœ‰è€…å¯ä»¥å–æ¶ˆ");
    println!("âœ… éƒ¨åˆ†æˆäº¤æ”¯æŒ: æ”¯æŒå–æ¶ˆéƒ¨åˆ†æˆäº¤çš„è®¢å•");
    println!("âœ… ä½™é¢è§£å†»: è‡ªåŠ¨è§£å†»è®¢å•å ç”¨çš„èµ„é‡‘");
    println!("âœ… åŸå­æ“ä½œ: è®¢å•å–æ¶ˆå’Œä½™é¢è§£å†»çš„åŸå­æ€§ä¿è¯");
    println!("âœ… é”™è¯¯å¤„ç†: å®Œå–„çš„é”™è¯¯æƒ…å†µå¤„ç†");
    println!("âœ… å®æ—¶æ›´æ–°: è®¢å•ç°¿å®æ—¶æ›´æ–°");
    println!("âœ… åˆ†ç‰‡è·¯ç”±: æŒ‰è´¦æˆ·å’Œäº¤æ˜“å¯¹æ™ºèƒ½è·¯ç”±");

    println!("\n=== API ä½¿ç”¨è¯´æ˜ ===");
    println!("gRPC æ¥å£: cancelOrder");
    println!("è¯·æ±‚å‚æ•°:");
    println!("  - requestId: è¯·æ±‚ID (å¯é€‰)");
    println!("  - symbolId: äº¤æ˜“å¯¹ID (å¿…å¡«)");
    println!("  - accountId: è´¦æˆ·ID (å¿…å¡«)");
    println!("  - orderId: è¦å–æ¶ˆçš„è®¢å•ID (å¿…å¡«)");

    println!("\nå“åº”å­—æ®µ:");
    println!("  - code: çŠ¶æ€ç  (0=æˆåŠŸ, 404=è®¢å•æœªæ‰¾åˆ°, 403=æƒé™é”™è¯¯)");
    println!("  - message: çŠ¶æ€æ¶ˆæ¯");
    println!("  - orderId: è®¢å•ID");
    println!("  - cancelledQuantity: å–æ¶ˆçš„æ•°é‡");
    println!("  - refundAmount: é€€è¿˜çš„é‡‘é¢ (å¯é€‰)");

    println!("\n=== ä½¿ç”¨ç¤ºä¾‹ ===");
    println!("```bash");
    println!("# å–æ¶ˆè®¢å•");
    println!("grpcurl -plaintext -d '{{");
    println!("  \"symbolId\": 1,");
    println!("  \"accountId\": 1001,");
    println!("  \"orderId\": 12345");
    println!("}}' localhost:50051 schema.Lightning/cancelOrder");
    println!("```");

    println!("\n=== æ€§èƒ½ç‰¹å¾ ===");
    println!("ğŸ“ˆ å–æ¶ˆå»¶è¿Ÿ: < 5ms (åŒ…å«ä½™é¢è§£å†»)");
    println!("ğŸ“ˆ å¹¶å‘æ”¯æŒ: æ”¯æŒé«˜å¹¶å‘å–æ¶ˆè¯·æ±‚");
    println!("ğŸ“ˆ æ•°æ®ä¸€è‡´æ€§: ä¿è¯è®¢å•ç°¿å’Œä½™é¢çš„ä¸€è‡´æ€§");
    println!("ğŸ“ˆ é”™è¯¯æ¢å¤: æ”¯æŒå¼‚å¸¸æƒ…å†µçš„è‡ªåŠ¨æ¢å¤");

    println!("\n=== æ¼”ç¤ºå®Œæˆ ===");
}

fn display_order_book(engine: &MatchingEngine, symbol_id: i32) {
    if let Some(order_book) = engine.get_order_book(symbol_id) {
        let (bids, asks) = order_book.get_market_depth(5);

        println!("è®¢å•ç°¿ (Symbol: {}):", symbol_id);

        println!("  ä¹°å• (Bids):");
        if bids.is_empty() {
            println!("    æ— ");
        } else {
            for (i, (price, quantity)) in bids.iter().enumerate() {
                println!("    Level {}: ä»·æ ¼={}, æ•°é‡={}", i + 1, price, quantity);
            }
        }

        println!("  å–å• (Asks):");
        if asks.is_empty() {
            println!("    æ— ");
        } else {
            for (i, (price, quantity)) in asks.iter().enumerate() {
                println!("    Level {}: ä»·æ ¼={}, æ•°é‡={}", i + 1, price, quantity);
            }
        }

        if let (Some(best_bid), Some(best_ask)) =
            (order_book.get_best_bid(), order_book.get_best_ask())
        {
            println!("  æœ€ä¼˜ä¹°ä»·: {}, æœ€ä¼˜å–ä»·: {}", best_bid, best_ask);
            println!("  ä»·å·®: {}", best_ask - best_bid);
        } else if let Some(best_bid) = order_book.get_best_bid() {
            println!("  æœ€ä¼˜ä¹°ä»·: {}, æ— å–å•", best_bid);
        } else if let Some(best_ask) = order_book.get_best_ask() {
            println!("  æœ€ä¼˜å–ä»·: {}, æ— ä¹°å•", best_ask);
        } else {
            println!("  è®¢å•ç°¿ä¸ºç©º");
        }
    } else {
        println!("è®¢å•ç°¿ä¸å­˜åœ¨");
    }
}
