use lightning::{
    matching::MatchingEngine,
    models::{init_global_config, schema::*},
};
use std::time::{SystemTime, UNIX_EPOCH};
use uuid::Uuid;

#[tokio::main]
async fn main() {
    println!("=== Lightning Level2 OrderBook Demo ===\n");

    // åˆå§‹åŒ–å…¨å±€é…ç½®
    init_global_config();
    println!("âœ“ Global currencies and symbols initialized");
    println!("  - BTC (id: 1)");
    println!("  - USDT (id: 2)");
    println!("  - BTC-USDT (symbol_id: 1, base: BTC, quote: USDT)\n");

    // åˆ›å»ºæ’®åˆå¼•æ“
    let mut matching_engine = MatchingEngine::new();
    println!("âœ“ Matching engine created\n");

    println!("=== æ­¥éª¤1: æ„å»ºè®¢å•ç°¿ ===");

    // æ·»åŠ å¤šå±‚ä¹°å• (Bids)
    let buy_orders = vec![
        (2001, "50000.0", "1.0"), // æœ€ä¼˜ä¹°ä»·
        (2002, "49900.0", "0.5"),
        (2003, "49800.0", "0.8"),
        (2004, "49700.0", "1.2"),
        (2005, "49600.0", "0.3"),
        (2006, "49500.0", "2.0"),
        (2007, "49400.0", "0.7"),
    ];

    println!("æ·»åŠ ä¹°å• (Bids):");
    for (account_id, price, quantity) in &buy_orders {
        let result = matching_engine.place_order(
            Uuid::new_v4(),
            1, // BTC-USDT
            *account_id,
            0, // Limit order
            0, // Bid
            price,
            quantity,
        );

        match result {
            Ok((order_id, trades)) => {
                println!(
                    "  è´¦æˆ· {} ä¹°å•: ä»·æ ¼={}, æ•°é‡={}, è®¢å•ID={}, æˆäº¤={}",
                    account_id,
                    price,
                    quantity,
                    order_id,
                    trades.len()
                );
            }
            Err(e) => {
                println!("  è´¦æˆ· {} ä¹°å•å¤±è´¥: {}", account_id, e);
            }
        }
    }

    println!("\næ·»åŠ å–å• (Asks):");
    // æ·»åŠ å¤šå±‚å–å• (Asks)
    let sell_orders = vec![
        (3001, "50100.0", "0.5"), // æœ€ä¼˜å–ä»·
        (3002, "50200.0", "1.0"),
        (3003, "50300.0", "0.8"),
        (3004, "50400.0", "1.5"),
        (3005, "50500.0", "0.6"),
        (3006, "50600.0", "2.2"),
        (3007, "50700.0", "0.9"),
    ];

    for (account_id, price, quantity) in &sell_orders {
        let result = matching_engine.place_order(
            Uuid::new_v4(),
            1, // BTC-USDT
            *account_id,
            0, // Limit order
            1, // Ask
            price,
            quantity,
        );

        match result {
            Ok((order_id, trades)) => {
                println!(
                    "  è´¦æˆ· {} å–å•: ä»·æ ¼={}, æ•°é‡={}, è®¢å•ID={}, æˆäº¤={}",
                    account_id,
                    price,
                    quantity,
                    order_id,
                    trades.len()
                );
            }
            Err(e) => {
                println!("  è´¦æˆ· {} å–å•å¤±è´¥: {}", account_id, e);
            }
        }
    }

    println!("\n=== æ­¥éª¤2: æŸ¥è¯¢Level2æ•°æ® ===");

    // æ¨¡æ‹ŸLevel2æŸ¥è¯¢
    if let Some(order_book) = matching_engine.get_order_book(1) {
        // è·å–ä¸åŒæ·±åº¦çš„Level2æ•°æ®
        let depths = vec![3, 5, 10, 20];

        for depth in depths {
            println!("\n--- {}æ¡£æ·±åº¦ Level2 æ•°æ® ---", depth);
            let (bids, asks) = order_book.get_market_depth(depth);

            // æ„é€ Level2å“åº”
            let bid_levels: Vec<PriceLevel> = bids
                .into_iter()
                .map(|(price, quantity)| PriceLevel {
                    price: price.to_string(),
                    quantity: quantity.to_string(),
                })
                .collect();

            let ask_levels: Vec<PriceLevel> = asks
                .into_iter()
                .map(|(price, quantity)| PriceLevel {
                    price: price.to_string(),
                    quantity: quantity.to_string(),
                })
                .collect();

            let best_bid = order_book.get_best_bid().map(|p| p.to_string());
            let best_ask = order_book.get_best_ask().map(|p| p.to_string());
            let spread = order_book.get_spread().map(|s| s.to_string());

            let level2_response = GetOrderBookResponse {
                code: 0,
                message: Some("Success".to_string()),
                symbol_id: 1,
                bids: bid_levels,
                asks: ask_levels,
                best_bid: best_bid.clone(),
                best_ask: best_ask.clone(),
                spread: spread.clone(),
                timestamp: SystemTime::now()
                    .duration_since(UNIX_EPOCH)
                    .unwrap()
                    .as_millis() as i64,
            };

            // æ˜¾ç¤ºLevel2æ•°æ®
            println!("Symbol ID: {}", level2_response.symbol_id);
            println!("Timestamp: {}", level2_response.timestamp);
            println!("Best Bid: {:?}", best_bid);
            println!("Best Ask: {:?}", best_ask);
            println!("Spread: {:?}", spread);

            println!("\nBids (ä¹°ç›˜, æŒ‰ä»·æ ¼é™åº):");
            for (i, level) in level2_response.bids.iter().enumerate() {
                println!(
                    "  Level {}: ä»·æ ¼={}, æ•°é‡={}",
                    i + 1,
                    level.price,
                    level.quantity
                );
            }

            println!("\nAsks (å–ç›˜, æŒ‰ä»·æ ¼å‡åº):");
            for (i, level) in level2_response.asks.iter().enumerate() {
                println!(
                    "  Level {}: ä»·æ ¼={}, æ•°é‡={}",
                    i + 1,
                    level.price,
                    level.quantity
                );
            }

            // è®¡ç®—ä¸€äº›ç»Ÿè®¡ä¿¡æ¯
            let bid_total: f64 = level2_response
                .bids
                .iter()
                .map(|level| level.quantity.parse::<f64>().unwrap_or(0.0))
                .sum();
            let ask_total: f64 = level2_response
                .asks
                .iter()
                .map(|level| level.quantity.parse::<f64>().unwrap_or(0.0))
                .sum();

            println!("\nğŸ“Š ç»Ÿè®¡ä¿¡æ¯:");
            println!("  ä¹°ç›˜æ€»é‡: {} BTC", bid_total);
            println!("  å–ç›˜æ€»é‡: {} BTC", ask_total);

            if let (Some(bid), Some(ask)) = (&best_bid, &best_ask) {
                let bid_price: f64 = bid.parse().unwrap_or(0.0);
                let ask_price: f64 = ask.parse().unwrap_or(0.0);
                let mid_price = (bid_price + ask_price) / 2.0;
                println!("  ä¸­ä½ä»·æ ¼: {:.1} USDT", mid_price);

                if let Some(spread_str) = &spread {
                    let spread_value: f64 = spread_str.parse().unwrap_or(0.0);
                    let spread_bps = (spread_value / mid_price) * 10000.0;
                    println!("  ä»·å·®: {} USDT ({:.2} bps)", spread_str, spread_bps);
                }
            }
        }
    } else {
        println!("âŒ è®¢å•ç°¿ä¸å­˜åœ¨");
    }

    println!("\n=== æ­¥éª¤3: æ¨¡æ‹Ÿæ’®åˆåçš„Level2å˜åŒ– ===");

    // ä¸‹ä¸€ä¸ªå¸‚ä»·ä¹°å•ï¼Œä¼šå½±å“Level2æ•°æ®
    println!("ä¸‹å¸‚ä»·ä¹°å•: 0.8 BTC");
    let market_buy_result = matching_engine.place_order(
        Uuid::new_v4(),
        1,
        4001,
        1,   // Market order
        0,   // Bid
        "0", // ä»·æ ¼ä¸é‡è¦
        "0.8",
    );

    match market_buy_result {
        Ok((order_id, trades)) => {
            println!(
                "å¸‚ä»·ä¹°å•æ‰§è¡ŒæˆåŠŸ, è®¢å•ID: {}, æˆäº¤ç¬”æ•°: {}",
                order_id,
                trades.len()
            );

            for trade in trades {
                println!("  æˆäº¤: ä»·æ ¼={}, æ•°é‡={}", trade.price, trade.quantity);
            }
        }
        Err(e) => {
            println!("å¸‚ä»·ä¹°å•å¤±è´¥: {}", e);
        }
    }

    // æ˜¾ç¤ºæ’®åˆåçš„Level2æ•°æ®
    if let Some(order_book) = matching_engine.get_order_book(1) {
        println!("\n--- æ’®åˆåçš„ Level2 æ•°æ® (5æ¡£) ---");
        let (bids, asks) = order_book.get_market_depth(5);

        println!("Bids (ä¹°ç›˜):");
        for (i, (price, quantity)) in bids.iter().enumerate() {
            println!("  Level {}: ä»·æ ¼={}, æ•°é‡={}", i + 1, price, quantity);
        }

        println!("\nAsks (å–ç›˜):");
        for (i, (price, quantity)) in asks.iter().enumerate() {
            println!("  Level {}: ä»·æ ¼={}, æ•°é‡={}", i + 1, price, quantity);
        }

        if let (Some(best_bid), Some(best_ask)) =
            (order_book.get_best_bid(), order_book.get_best_ask())
        {
            println!("\nBest Bid: {}, Best Ask: {}", best_bid, best_ask);
            println!("Spread: {}", best_ask - best_bid);
        }
    }

    println!("\n=== æ­¥éª¤4: Level2æ¥å£ç‰¹æ€§æ€»ç»“ ===");
    println!("âœ… å¤šæ¡£æ·±åº¦æ”¯æŒ: æ”¯æŒ1-20æ¡£æ·±åº¦æŸ¥è¯¢");
    println!("âœ… å®æ—¶æ•°æ®: åæ˜ è®¢å•ç°¿çš„å®æ—¶çŠ¶æ€");
    println!("âœ… ä»·æ ¼æ’åº: ä¹°ç›˜é™åºï¼Œå–ç›˜å‡åº");
    println!("âœ… èšåˆæ•°é‡: åŒä»·ä½è®¢å•æ•°é‡è‡ªåŠ¨èšåˆ");
    println!("âœ… æœ€ä¼˜ä»·æ ¼: æä¾›Best Bid/Ask");
    println!("âœ… ä»·å·®è®¡ç®—: å®æ—¶è®¡ç®—ä¹°å–ä»·å·®");
    println!("âœ… æ—¶é—´æˆ³: æä¾›æ•°æ®ç”Ÿæˆæ—¶é—´");
    println!("âœ… é”™è¯¯å¤„ç†: å¤„ç†æ— æ•ˆäº¤æ˜“å¯¹ç­‰å¼‚å¸¸æƒ…å†µ");

    println!("\n=== Level2 API ä½¿ç”¨è¯´æ˜ ===");
    println!("gRPC æ¥å£: getOrderBook");
    println!("è¯·æ±‚å‚æ•°:");
    println!("  - symbolId: äº¤æ˜“å¯¹ID (å¿…å¡«)");
    println!("  - levels: æ·±åº¦æ¡£æ•° (å¯é€‰ï¼Œé»˜è®¤20æ¡£)");
    println!("  - requestId: è¯·æ±‚ID (å¯é€‰)");

    println!("\nå“åº”å­—æ®µ:");
    println!("  - code: çŠ¶æ€ç  (0=æˆåŠŸ)");
    println!("  - message: çŠ¶æ€æ¶ˆæ¯");
    println!("  - symbolId: äº¤æ˜“å¯¹ID");
    println!("  - bids: ä¹°ç›˜æ·±åº¦ [{{price, quantity}}]");
    println!("  - asks: å–ç›˜æ·±åº¦ [{{price, quantity}}]");
    println!("  - bestBid: æœ€ä¼˜ä¹°ä»·");
    println!("  - bestAsk: æœ€ä¼˜å–ä»·");
    println!("  - spread: ä»·å·®");
    println!("  - timestamp: æ—¶é—´æˆ³");

    println!("\n=== æ€§èƒ½ç‰¹å¾ ===");
    println!("ğŸ“ˆ æŸ¥è¯¢å»¶è¿Ÿ: < 1ms (å¾®ç§’çº§)");
    println!("ğŸ“ˆ æ›´æ–°é¢‘ç‡: å®æ—¶ (æ¯æ¬¡æ’®åˆåç«‹å³æ›´æ–°)");
    println!("ğŸ“ˆ å¹¶å‘æ”¯æŒ: æ”¯æŒé«˜å¹¶å‘æŸ¥è¯¢");
    println!("ğŸ“ˆ å†…å­˜æ•ˆç‡: åŸºäºBTreeMapçš„é«˜æ•ˆå­˜å‚¨");

    println!("\n=== æ¼”ç¤ºå®Œæˆ ===");
}
